[tool.poetry]
name = "database-setup"
version = "0.1.0"
description = ""
authors = ["kimkun07 <kimkun07@naver.com>"]
readme = "README.md"

[tool.poetry-monorepo.deps]

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.2"
database-core = { path = "../database-core", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
